--- a/css/styles.css
+++ b/css/styles.css
@@ -1202,6 +1202,7 @@ body {
   border-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
+
 @media (min-width: 768px) {
   .subscribe-input {
     width: 264px;
@@ -1214,16 +1215,24 @@ body {
 }
 
 .subscribe-btn {
-  margin: 0;
+  /* Центрування кнопки */
+  margin: 0 auto;
+
   min-width: 165px;
   height: 40px;
-  /* padding: 8px 16px; */
+  padding: 8px 24px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 16px;
   box-shadow: none;
+}
+
+@media (min-width: 768px) {
+  .subscribe-btn {
+    margin: 0;
+  }
 }
 
 .subscribe-btn .icon {
